# devpro

./: LICENSE  pyproject.toml
contrib/: env_gen.py
projeto/: settings.py  urls.py
projeto/core/: urls.py
