[tool.poetry]
name = "devpro"
version = "0.1.0"
description = ""
authors = ["Deyved Antonio <deyved.antonio@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-django = "^4.9.0"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "projeto.settings"
python_files = ["test*.py", "*_test.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
